<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pop_layout"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_share_operate_bg"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/share_toptitle"
                android:layout_width="wrap_content"
                android:layout_height="48dip"
                android:layout_marginTop="8dip"
                android:gravity="center"
                android:text="分享至"
                android:layout_centerHorizontal="true"
                android:textColor="#ff2d3132"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/share_select_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/share_cancle_string"
                android:textColor="#FF565656"
                android:src="@mipmap/icon_close"
                android:padding="20dp"
                android:layout_alignParentRight="true"
                android:textSize="18sp" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/share_item_toplayout"
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/share_select_wechat"
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:src="@mipmap/icon_share_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dip"
                    android:text="@string/share_platform_wechat_string"
                    android:textColor="#ff8a9499"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/share_select_wechatm"
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:src="@mipmap/icon_share_wechat_m" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dip"
                    android:text="@string/share_platform_wechatm_string"
                    android:textColor="#ff8a9499"
                    android:textSize="14sp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/share_select_qq"
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:src="@mipmap/icon_share_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dip"
                    android:text="@string/share_platform_qq_string"
                    android:textColor="#ff8a9499"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/share_select_qzome"
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:src="@mipmap/icon_share_qzone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dip"
                    android:text="@string/share_platform_qzone_string"
                    android:textColor="#ff8a9499"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/share_select_sina"
                    android:layout_width="35dip"
                    android:layout_height="35dip"
                    android:src="@mipmap/icon_share_sina" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dip"
                    android:text="@string/share_platform_sina_string"
                    android:textColor="#ff8a9499"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:gravity="center"
            android:textColor="#FF565656"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>